Version 5, e1 terminado, e2 terminado, e3 terminado y e4 terminado